Ajout et fin des exercices

--- a/exercice 1/index.html
+++ b/exercice 1/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr" ng-app="" dir="ltr">
+<html lang="fr" ng-app dir="ltr">
     <head>
         <meta charset="UTF-8" />
         <title>Exercice 1</title>
