--- a/exercice 3/index.html
+++ b/exercice 3/index.html
@@ -1,33 +1,33 @@
-<!doctype html>
-<html ng-app="App" lang="fr" dir="ltr">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Exercice 3</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.7/angular.min.js"></script>
-        <script src="angularjs.js"></script>
-    </head>
-  <!-- afficher la liste des voitures et leur couleur du fichier voiture.json uniquement si la couleur est verte. -->
+<!Doctype html>
+<html lang="fr" dir="ltr">
+<head>
+  <meta charset="UTF-8" />
+  <title>Exercice 3</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.7/angular.min.js"></script>
+  <script src="angularjs.js"></script>
+</head>
+<!-- afficher la liste des voitures et leur couleur du fichier voiture.json uniquement si la couleur est verte. -->
 <body>
-<div ng-controller="voituresCtrl">
-  <table cellspacing="2px" cellpadding="2px;" rules="all" style="border:solid 1px black;">
-    <thead>
-      <th>Modèle</th>
-      <th>Couleur</th>
-    </thead>
-    <!-- <element ng-if="expression"></element> -->
-      <tr  ng-repeat="voiture in voitures" ng-if="voiture.couleur == 'verte'">
-    <!--{{ filter_expression | filter : expression : comparator : anyPropertyKey}}  -->
-    <!-- <tr ng-repeat="voiture in voitures | filter : {couleur : 'verte'}"> --> 
-      <td>
-        {{ voiture.marque}}
-      </td>
-      <td>
-        {{ voiture.couleur}}
-      </td>
-    </tr>
-  </table>
-</div>
+  <div ng-app="App" ng-controller="voituresCtrl">
+    <table cellspacing="2px" cellpadding="2px;" rules="all" style="border:solid 1px black;">
+      <thead>
+        <th>Modèle</th>
+        <th>Couleur</th>
+      </thead>
+      <!-- <element ng-if="expression"></element> -->
+      <tr  ng-repeat="voiture in carsArray" ng-if="voiture.couleur == 'verte'">
+        <!--{{ filter_expression | filter : expression : comparator : anyPropertyKey}}  -->
+        <!-- <tr ng-repeat="voiture in voitures | filter : {couleur : 'verte'}">  -->
+        <td>
+          {{ voiture.marque}}
+        </td>
+        <td>
+          {{ voiture.couleur}}
+        </td>
+      </tr>
+    </table>
+  </div>
 
 </body>
 </html>
